--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a2a73d3d",
    "metadata": {},
    "outputs": [
@@ -89,17 +89,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_invalid_location (__main__.TestLoader.test_invalid_location) ... ok\n",
-      "test_valid_locations (__main__.TestLoader.test_valid_locations) ... ok\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting geopy\n",
+      "  Using cached geopy-2.4.1-py3-none-any.whl.metadata (6.8 kB)\n",
+      "Requirement already satisfied: pandas in c:\\users\\tessa\\appdata\\roaming\\python\\python313\\site-packages (2.3.3)\n",
+      "Collecting geographiclib<3,>=1.52 (from geopy)\n",
+      "  Using cached geographiclib-2.1-py3-none-any.whl.metadata (1.6 kB)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in c:\\users\\tessa\\appdata\\roaming\\python\\python313\\site-packages (from pandas) (2.3.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\tessa\\appdata\\roaming\\python\\python313\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\tessa\\appdata\\roaming\\python\\python313\\site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\tessa\\appdata\\roaming\\python\\python313\\site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\tessa\\appdata\\roaming\\python\\python313\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Using cached geopy-2.4.1-py3-none-any.whl (125 kB)\n",
+      "Using cached geographiclib-2.1-py3-none-any.whl (40 kB)\n",
+      "Installing collected packages: geographiclib, geopy\n",
+      "\n",
+      "   -------------------- ------------------- 1/2 [geopy]\n",
+      "   -------------------- ------------------- 1/2 [geopy]\n",
+      "   -------------------- ------------------- 1/2 [geopy]\n",
+      "   -------------------- ------------------- 1/2 [geopy]\n",
+      "   ---------------------------------------- 2/2 [geopy]\n",
+      "\n",
+      "Successfully installed geographiclib-2.1 geopy-2.4.1\n",
+      "Error fetching data for 'asdfqwer1234': Location not found.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test_invalid_location (__main__.TestLoader.test_invalid_location)\n",
+      "Invalid location should return NaN values ... ok\n",
+      "test_valid_locations (__main__.TestLoader.test_valid_locations)\n",
+      "Test known valid locations with expected coordinates and type. ... ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 2 tests in 0.275s\n",
+      "Ran 2 tests in 2.646s\n",
       "\n",
       "OK\n"
      ]
     }
    ],
    "source": [
+    "!pip install geopy pandas\n",
+    "\n",
     "!python test_loader.py -v"
    ]
   },
@@ -130,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
